sandbox/output
FizzBuzz.java:9: error: constructor FizzBuzzHandler in class FizzBuzzHandler cannot be applied to given types;
        this.fizzBuzzHandler = new FizzBuzzHandler(fizzHandler);
                               ^
  required: no arguments
  found: Handler
  reason: actual and formal argument lists differ in length
FizzBuzz.java:15: error: cannot find symbol
        result = this.fizzBuzzHandler.handle(number);
                                     ^
  symbol:   method handle(int)
  location: variable fizzBuzzHandler of type Handler
2 errors
